# agenticml

./: .gitignore  README.md  command.txt  pyproject.toml  recipe.md  requirements.txt
docs/: benchmark_results.md  report.md
model_cards/: agenticml-llama3.1-8b-lora-merged.md  chatml-llama3.1-8b-lora-adapter.md  chatml-llama3.1-8b-lora-merged.md  telos-llama3.1-8b-lora-adapter.md  telos-llama3.1-8b-lora-merged.md
results/: telos_format_validity_3.json
scripts/: check_embeddings_of_unreserved.py  generate_eval_figures.py  initialize_chatml_embeddings.py  initialize_telos_embeddings.py  telos_baseline_init.py  test_generation.py  test_llama_tokenizer.py  test_load_llama.py  test_telos_baseline.py  test_tokenizer_load.py  test_tokenizer_special_tokens.py
scripts/training_scripts/: train_chatml_lora.py  train_lora_common.py  train_telos_lora.py
src/: tokenizer.py
src/agenticml/cli/commands/: eval_aggregate_results.py
src/agenticml/evaluation/benchmarks/: aggregate_results.py
src/agenticml/prompts/: synthetic_data_generation.py
src/telos/: frames.py  sdk.py  tokenizer.py  trajectory.py  validators.py
src/telos/cli/: main.py
src/telos/cli/commands/: eval_format_validity.py
src/telos/evaluation/: format_validity.py
src/telos/evaluation/harness/: __init__.py  load.py  runner.py
src/telos/runtime/: hf_generator.py  runtime.py  tools.py
tests/: test_chatml_backend.py  test_llama_gpu_integration.py  test_sdk.py  test_tokenizers.py  test_trajectory.py  test_validators.py
tests/runtime/: test_hf_generator.py  test_runtime.py
(+5 files in other folders)
