[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "telos"
version = "0.1.0"
description = "telos tokenizer adapter"
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.15",
    "transformers>=4.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
llm-scripts = [
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
